--- a/page.css
+++ b/page.css
@@ -1,15 +1,92 @@
 
-
-.body {
-    background-color: #FFEDF8;
-  }
+/*fond de page*/
   
+/*navbar*/
+#navbarSupportedContent{
+  justify-content: end;
+  padding-right: 5%;
+}
 
-.h2{
-    font-family: cooper-black-std, serif;
-  font-style: normal;
+#logo{
+  height: 50px;
+  width: 50px;
+}
+
+.navbar-brand{
+  padding-left: 5%;
+}
+
+.container-fluid{
+  padding-block: 10px;
+}
+
+.accueil-fond{
+padding-top: 5%;
+padding-bottom: 15%;
+}
+
+/* a propos*/
+.card-body-1{
+  padding-top: 20%;
+  padding-right: 5%;
+}
+
+.card-text{
+  padding-right: 5%;
+
+}
+
+.image-acceuil{
+  padding-top: 10%;
+  padding-left: 25%;
+}
+
+.btn-primary {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #F4B425;
+  --bs-btn-border-color: #F4B425;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #f0ca76;
+  --bs-btn-hover-border-color: F4B425;
+  --bs-btn-focus-shadow-rgb: 66,70,73;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: F4B425;
+  --bs-btn-active-border-color: F4B425;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: F4B425;
+  --bs-btn-disabled-border-color: F4B425;
+}
+/*police d'écriture*/
+h1 {
+  font-family: "cooper-black-std", serif;
   font-weight: 400;
-  }
+  font-style: normal;
+}
+
+/*Qui sommes-nous*/
+.container-bl{
+  background-color:white;
+}
+
+
+/* syndrome*/
+
+
+.container-synd{
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.text-synd{
+  text-align: center;
+}
+
+.bg-synd {
+  background-color: #FFF6E1;
+}
   
 
-  
+ul#menu-header a {
+  color:#474747;
+}
