--- a/page.css
+++ b/page.css
@@ -7,6 +7,22 @@
   padding-right: 5%;
 }
 
+
+
+.login-button {
+  /* Ajoutez ici vos styles personnalisés */
+  text-decoration: none;
+  padding: 10px;
+  background-color: #4CAF50;
+  color: white;
+  border-radius: 5px;
+}
+
+.login-button i {
+  margin-right: 5px;
+}
+
+
 #logo{
   height: 50px;
   width: 50px;
@@ -61,6 +77,7 @@ padding-bottom: 15%;
 h1 {
   font-family: "cooper-black-std", serif;
   font-weight: 400;
+  font-size: 55px;
   font-style: normal;
 }
 
@@ -71,7 +88,6 @@ h1 {
 
 
 /* syndrome*/
-
 
 .container-synd{
   padding-left: 5%;
@@ -90,3 +106,14 @@ h1 {
 ul#menu-header a {
   color:#474747;
 }
+
+.container-synd{
+padding-top: 10%;
+padding-bottom: 5%;
+}
+
+.wp-block-embed__wrapper{
+  justify-content: center;
+}
+
+/*footer*/
