--- a/page.css
+++ b/page.css
@@ -1,27 +1,20 @@
 
 /*fond de page*/
   
+body{
+  font-family: "Poppins" ;
+background-color: #EBE8ED;}
+
+
 /*navbar*/
 #navbarSupportedContent{
   justify-content: end;
   padding-right: 5%;
 }
 
-
-
-.login-button {
-  /* Ajoutez ici vos styles personnalisés */
-  text-decoration: none;
-  padding: 10px;
-  background-color: #4CAF50;
-  color: white;
-  border-radius: 5px;
+ul#menu-header a {
+  color:#474747;
 }
-
-.login-button i {
-  margin-right: 5px;
-}
-
 
 #logo{
   height: 50px;
@@ -40,6 +33,79 @@
 padding-top: 5%;
 padding-bottom: 15%;
 }
+
+
+/* connexion*/
+#email{
+  background-color: #EBE8ED;
+  border-radius: 30px;
+  width: 75%;
+}
+
+#password{
+  background-color: #EBE8ED;
+  border-radius: 30px;
+  width: 75%;
+}
+
+.login-container {
+  width: 390px;
+  padding: 30px;
+  background-color: #fff;
+  margin: 100px auto;
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+border-radius: 30px;
+border: #474747 2px;
+}
+
+h2 {
+  font-family: "Cooper Std Black";
+  text-align: center;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.input-field {
+  margin-bottom: 20px;
+  justify-content: center;
+}
+
+.input-field label {
+  display: block;
+  margin-bottom: 5px;
+  color: #333;
+}
+
+.input-field input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border: 10px;
+  font-size: 14px;
+  color: #333;
+}
+
+.checkbox {
+  margin-bottom: 20px;
+}
+
+.checkbox input {
+  margin-right: 5px;
+}
+
+.checkbox label {
+  color: #333;
+}
+
+.login-btn {
+  background-color: #FFF;
+  border-radius: 30px;
+  border-color: EBE8ED;
+  width: 30%;
+  height: 5%;
+}
+
+
 
 /* a propos*/
 .card-body-1{
@@ -73,13 +139,20 @@ padding-bottom: 15%;
   --bs-btn-disabled-bg: F4B425;
   --bs-btn-disabled-border-color: F4B425;
 }
+
+
 /*police d'écriture*/
 h1 {
-  font-family: "cooper-black-std", serif;
+  font-family: "Cooper Std Black", serif;
   font-weight: 400;
   font-size: 55px;
   font-style: normal;
 }
+
+h7{
+  font-family: "Poppins";
+}
+
 
 /*Qui sommes-nous*/
 .container-bl{
@@ -88,24 +161,51 @@ h1 {
 
 
 /* syndrome*/
-
 .container-synd{
   padding-left: 5%;
   padding-right: 5%;
+}
+
+.card-body{
+  margin: auto;
+text-align: center ;
+}
+
+.btn-info{
+  margin: center;
+  border-radius: 6rem;
+}
+
+.row{
+  row-gap: 3rem;
+  margin: auto;
+}
+
+.row-synd{
+  width: 90%;
+    margin: auto;
+    row-gap: 2rem;
+}
+
+.card{
+  position: relative;
+    display: flex;
+    overflow: hidden;
+    padding: 2rem;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-clip: border-box;
+    border: 1px solid red(0, 0, 0, 0.125);
 }
 
 .text-synd{
   text-align: center;
 }
 
-.bg-synd {
-  background-color: #FFF6E1;
-}
-  
-
-ul#menu-header a {
-  color:#474747;
-}
+.page-id-185{
+background-color: #FFF6E1;
+}  
 
 .container-synd{
 padding-top: 10%;
@@ -114,6 +214,10 @@ padding-bottom: 5%;
 
 .wp-block-embed__wrapper{
   justify-content: center;
+}
+
+.postid-151 {
+  background-color: #FFF6E1;
 }
 
 /*footer*/
