--- a/quiz.css
+++ b/quiz.css
@@ -13,15 +13,12 @@
     align-items: center;
     text-align: center;
     font-weight: 400;
-    width: 90%;
     cursor: pointer;
 }
-.question-screen{
-    margin-top: 100px;
-}
+
 .welcome-screen {
     flex-direction: column;  
-    background-image: url(img/background.png);
+    background-image: url(assets/img/background.png);
     background-size: cover;
     background-position-x: center;
     height: 100vh;
@@ -48,13 +45,16 @@ body {
     background: #CDB4DB;
     width: 90%;
     max-width: 800px;
-    height: 2000px;
+    height: 1000px;
     border-radius: 30px;
-    padding: 30px;
+    padding: 50px;
     justify-content: center;
+    margin: auto; 
+    margin-top: 50px;
 }
 .app h2{
     font-weight:650 ;
+    font-size: 20px;
     color: #474747;
     border-bottom: 2px solid #474747;
     font-family: 'Poppins';
@@ -68,21 +68,27 @@ body {
     --bs-btn-active-color: #fff;
     --bs-btn-active-bg: #AF76CE; */
 
-.reponse li{
+.app .reponse li{
+ 
   background-color: #fff;
   color: #474747;
     font-weight: 400;
-    width: 90%;
-    height: 45px;
+    height: 55px;
     border: none;
     padding: 10px;
-    margin: 10px 50px;
+    margin: 15px ;
     text-align: center;
-    border-radius: 18px;
+    border-radius: 25px;
     cursor: pointer;
     transition: all 0.3s;
-    justify-content: center;
+   align-items: center;
+    
   }
+ 
+.reponse{
+    align-items: center;
+    margin: 75px;
+}
 
  #start{
     background: #CF1679;
