--- a/page.css
+++ b/page.css
@@ -1,29 +1,276 @@
-
-
-body {
-  font-family: 'Poppins';
-    background-color: #FFEDF8;
-  }
+/*fond de page*/
   
+body{
+  font-family: "Poppins" ;
+background-color: #FFEDF8;}
 
-h2{
-    font-family: 'Cooper Std Black';
-    font-size: 55px;
-  font-weight: 400;
-  }
-  
-h5{
-  color: #F4B425;
-  font-weight: bold;
+
+/*navbar*/
+#navbarSupportedContent{
+  justify-content: end;
+  padding-right: 5%;
 }
 
-.text-uppercase h5 {
-  color:#FFF;
-  font-weight: bold;
+ul#menu-header a {
+  color:#474747;
 }
-.container-who {
-  background-color: #FFF;
-  margin: 0%;
-  width: 100%;
+
+#logo{
+  height: 50px;
+  width: 50px;
+}
+
+.navbar-brand{
+  padding-left: 5%;
+}
+
+.container-fluid{
+  padding-block: 10px;
+}
+
+.accueil-fond{
+padding-top: 5%;
+padding-bottom: 15%;
+}
+
+
+/* connexion-inscription*/
+
+
+#prenom{
+  background-color: #EBE8ED;
+
+}
+
+#nom{
+  background-color: #EBE8ED;
+  border-radius: 30px;
+  width: 75%;
+
+}
+
+#email{
+  background-color: #EBE8ED;
+  border-radius: 30px;
+  width: 75%;
+}
+
+#password{
+  background-color: #EBE8ED;
+  border-radius: 30px;
+  width: 75%;
+}
+
+.login-container{
+  width: 390px;
+  padding: 30px;
+  background-color: #fff;
+  margin: 100px auto;
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+border-radius: 30px;
+border: #474747 2px;
+}
+
+h2 {
+  font-family: "Cooper Std Black";
+  text-align: center;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.input-field {
+  margin-bottom: 20px;
   justify-content: center;
+}
+
+.input-field label {
+  display: block;
+  margin-bottom: 5px;
+  color: #333;
+}
+
+.input-field input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border: 10px;
+  font-size: 14px;
+  color: #333;
+}
+
+.checkbox {
+  margin-bottom: 20px;
+}
+
+.checkbox input {
+  margin-right: 5px;
+}
+
+.checkbox label {
+  color: #333;
+}
+
+.login-btn {
+  background-color: #FFF;
+  border-radius: 30px;
+  border-color: EBE8ED;
+  width: 30%;
+  height: 5%;
+}
+
+
+
+/* a propos*/
+.card-body-1{
+  padding-top: 20%;
+  padding-right: 5%;
+}
+
+.card-text{
+  padding-right: 5%;
+
+}
+
+.image-acceuil{
+  padding-top: 10%;
+  padding-left: 25%;
+}
+
+.btn-primary {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #F4B425;
+  --bs-btn-border-color: #F4B425;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #f0ca76;
+  --bs-btn-hover-border-color: F4B425;
+  --bs-btn-focus-shadow-rgb: 66,70,73;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: F4B425;
+  --bs-btn-active-border-color: F4B425;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: F4B425;
+  --bs-btn-disabled-border-color: F4B425;
+}
+
+
+/*police d'écriture*/
+h1 {
+  font-family: "Cooper Std Black", serif;
+  font-weight: 400;
+  font-size: 55px;
+  font-style: normal;
+}
+
+h7{
+  font-family: "Poppins";
+}
+
+
+/*Qui sommes-nous*/
+.container-bl{
+  background-color:white;
+}
+
+
+/* syndrome*/
+.container-synd{
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.card-body{
+  margin: auto;
+text-align: center ;
+}
+
+.btn-info{
+  margin: center;
+  border-radius: 6rem;
+}
+
+.row{
+  row-gap: 3rem;
+  margin: auto;
+}
+
+.row-synd{
+  width: 90%;
+    margin: auto;
+    row-gap: 2rem;
+}
+
+.card{
+  position: relative;
+    display: flex;
+    overflow: hidden;
+    padding: 2rem;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-clip: border-box;
+    border: 1px solid red(0, 0, 0, 0.125);
+}
+
+.text-synd{
+  text-align: center;
+}
+
+.page-id-185{
+background-color: #FFF6E1;
+}  
+
+.container-synd{
+padding-top: 10%;
+padding-bottom: 5%;
+}
+
+.wp-block-embed__wrapper{
+  justify-content: center;
+}
+
+.postid-151 {
+  background-color: #FFF6E1;
+}
+
+/*footer*/
+
+
+/*page rdv*/
+.main{
+  background: #fff;
+  border:#8EDD93 5px solid;
+    width: 70%;
+    height: 1000px;
+    border-radius: 35px;
+    padding: 50px;
+    margin-top: 50px;
+    margin-right: 50px;
+    float: right;
+}
+.sidenav {
+  width: 240px;
+  position: fixed;
+  z-index: 1;
+  top: 170px;
+  left: 25px;
+
+  overflow-x: hidden;
+  padding: 8px 0;
+}
+
+.sidenav a {
+  padding: 21px 13px 9px 45px;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 650;
+  color: #474747;
+  display: block;
+}
+
+.sidenav a:hover {
+  color: #064579;
+}
+img {
+  border-radius: 50%;
 }
