--- a/page.css
+++ b/page.css
@@ -83,6 +83,7 @@ h2 {
   justify-content: center;
 }
 
+
 .input-field label {
   display: block;
   margin-bottom: 5px;
@@ -234,7 +235,34 @@ padding-bottom: 5%;
 }
 
 /*footer*/
-
+.custom-search {
+  position: relative;
+  width: 300px;
+  
+}
+.custom-search-input {
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 100px;
+  padding: 10px 100px 10px 20px; 
+  line-height: 1;
+  box-sizing: border-box;
+  outline: none;
+}
+.custom-search-botton {
+  position: absolute;
+  right: 3px; 
+  top: 3px;
+  bottom: 3px;
+  border: 0;
+  background: #CDB4DB;
+  color: #fff;
+  outline: none;
+  margin: 0;
+  padding: 0 10px;
+  border-radius: 100px;
+  z-index: 2;
+}
 
 /*page rdv*/
 .main{
