--- a/page.css
+++ b/page.css
@@ -222,6 +222,10 @@ text-align: center ;
 background-color: #FFF6E1;
 }  
 
+.page-id-75{
+  background-color: #DECCE8;
+}
+
 .container-synd{
 padding-top: 10%;
 padding-bottom: 5%;
