--- a/page.css
+++ b/page.css
@@ -125,6 +125,7 @@ h2 {
 .card-body-1{
   padding-top: 20%;
   padding-right: 5%;
+  margin-right: 10%;
 }
 
 .card-text{
@@ -132,9 +133,8 @@ h2 {
 
 }
 
-.image-acceuil{
-  padding-top: 10%;
-  padding-left: 25%;
+.accueil-fond{
+  justify-content: space-between;
 }
 
 .btn-primary {
@@ -178,6 +178,7 @@ h7{
 .container-synd{
   padding-left: 5%;
   padding-right: 5%;
+  font-family: "Poppins";
 }
 
 .card-body{
@@ -187,7 +188,7 @@ text-align: center ;
 
 .btn-info{
   margin: center;
-  border-radius: 6rem;
+  border-radius: 12px;
 }
 
 .row{
@@ -222,8 +223,9 @@ background-color: #FFF6E1;
 }  
 
 .container-synd{
-padding-top: 10%;
-padding-bottom: 5%;
+padding-top: 5%;
+/* padding-left: 150px;
+padding-right: 150px; */
 }
 
 .wp-block-embed__wrapper{
@@ -232,6 +234,13 @@ padding-bottom: 5%;
 
 .postid-151 {
   background-color: #FFF6E1;
+}
+.wp-block-heading {
+  margin-bottom: 20px;
+}
+
+.page-id-75{
+  background-color: #DECCE8;
 }
 
 /*footer*/
@@ -265,26 +274,30 @@ padding-bottom: 5%;
 }
 
 /*page rdv*/
-.main{
+.rdv{
+  font-family: 'Poppins';
   background: #fff;
-  border:#8EDD93 5px solid;
+  border:#8EDD93 4px solid;
     width: 70%;
-    height: 1000px;
+    height: 95%;
     border-radius: 35px;
     padding: 50px;
-    margin-top: 50px;
-    margin-right: 50px;
+    margin-top: 30px;
+    margin-right: 100px;
     float: right;
+
 }
+
+
 .sidenav {
+  font-family: 'Poppins';
   width: 240px;
   position: fixed;
   z-index: 1;
   top: 170px;
   left: 25px;
-
   overflow-x: hidden;
-  padding: 8px 0;
+  padding-top: 60px;
 }
 
 .sidenav a {
@@ -297,8 +310,177 @@ padding-bottom: 5%;
 }
 
 .sidenav a:hover {
-  color: #064579;
+  color: #8EDD93;
 }
-img {
-  border-radius: 50%;
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
+* {
+	box-sizing: border-box;
+}
+
+
+
+.datetimepicker {
+	display: inline-flex;
+	align-items: center;
+	border: #8EDD93 3px solid;
+	border-radius: 12px;
+  display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 0;
+	margin-bottom: 50px;
+  margin-top: 50px;
+	font-family: "Poppins", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+	color: #474747;
+	
+
+ input {
+		font: inherit;
+		color: inherit;
+		appearance: none;
+		outline: none;
+		border: 0;
+		background-color: transparent;
+		
+		&[type=date] {
+			width: 10rem;
+			padding: .25rem 0 .25rem .5rem;
+			border-right-width: 0;
+		}
+		
+		&[type=time] {
+			width: 5.5rem;
+			padding: .25rem .5rem .25rem 0;
+			border-left-width: 0;
+		}
+	}
+}
+
+.btn-success {
+    color: #fff;
+    background-color: #8edd93;
+    border-color: #8edd93;
+    border-radius: 12px;
+}
+.wp-block-column {
+  justify-content: center;
+}
+
+/*page profil*/
+
+.profil{
+  font-family: 'Poppins';
+  background: #CDB4DB;
+
+    width: 70%;
+    height: 95%;
+    border-radius: 35px;
+    padding: 100px;
+    margin-top: 50px;
+    margin-right: 100px;
+    float: right;
+
+}
+
+
+.sidenavP {
+  font-family: 'Poppins';
+  width: 240px;
+  position: fixed;
+  z-index: 1;
+  top: 170px;
+  left: 25px;
+  overflow-x: hidden;
+  padding-top: 60px;
+}
+
+.sidenavP a {
+  padding: 21px 13px 9px 45px;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 650;
+  color: #474747;
+  display: block;
+}
+
+.sidenavP a:hover {
+  color: #59C3CD;
+}
+.sidenavP .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+.custom-search {
+  position: relative;
+  width: 300px;
+  
+}
+.name {
+  width: 80%;
+  border: 1px solid #ccc;
+  border-radius: 100px;
+  padding: 10px 20px ; 
+  line-height: 1;
+  box-sizing: border-box;
+  outline: none;
+
+}
+.custom-search-botton {
+  position: absolute;
+  right: 3px; 
+  top: 3px;
+  bottom: 3px;
+  border: 0;
+  background: #CDB4DB;
+  color: #fff;
+  outline: none;
+  margin: 0;
+  padding: 0 10px;
+  border-radius: 100px;
+  z-index: 2;
+}
+.blobprof{
+  align-items: center;
+}
+label,input{
+  display:flex;
+  flex-direction:column;
+}
+.phone {
+  width: 80%;
+  border: 1px solid #ccc;
+  border-radius: 100px;
+  padding: 10px 100px 10px 20px; 
+  line-height: 1;
+  box-sizing: border-box;
+  outline: none;
+
+}
+.phonepre {
+  position: absolute;
+  height: 3%;
+  width: 3%;
+  border: 0;
+  background: #CDB4DB;
+  color: #fff;
+  outline: none;
+  margin: 0;
+  padding: 0 10px;
+  border-radius: 100px;
+  z-index: 2;
 }
