--- a/quiz.css
+++ b/quiz.css
@@ -123,4 +123,13 @@ p{
 h1{
     font-size: 30px;
     font-weight: bold;
+    align-items: center;
+    text-align: center;
+}
+p{
+    position: fixed; 
+    bottom: 0;  
+    text-align: center;
+    font-size: 14px;
+    padding : 35px 250px
 }
