--- a/page.css
+++ b/page.css
@@ -1,39 +1,98 @@
 
-/*fond de page*/
-  
-body{
-  font-family: "Poppins" ;
-background-color: #EBE8ED;}
+/* dropdown menu */
 
 
-/*navbar*/
-#navbarSupportedContent{
-  justify-content: end;
-  padding-right: 5%;
+.menu-principal {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-ul#menu-header a {
-  color:#474747;
+.menu-principal li {
+  display: inline-block;
+  position: relative;
 }
 
-#logo{
-  height: 50px;
-  width: 50px;
+.menu-principal a {
+  display: block;
+  padding: 10px;
+  text-decoration: none;
 }
 
-.navbar-brand{
-  padding-left: 5%;
+.menu-principal .sub-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #fff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.container-fluid{
-  padding-block: 10px;
+.menu-principal li:hover .sub-menu {
+  display: block;
 }
 
-.accueil-fond{
-padding-top: 5%;
-padding-bottom: 15%;
+
+
+/* inscription */
+#wpmem_reg{
+  width: 390px;
+  padding: 30px;
+  background-color: #fff;
+  margin: 100px auto;
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+border-radius: 30px;
+border: #474747 2px;
+
 }
 
+
+input#first_name , input#last_name , input#user_email, input#username.textbox  {
+  margin-bottom: 10%;
+  width: 70%;
+  height: 5%;
+  border-radius: 30px;
+  background-color: #EBE8ED;
+  border: none;
+
+}
+
+
+
+/* connexion */
+fieldset{
+  justify-content: space-between;
+  padding: 15%;
+  border: none;
+}
+
+#wpmem_login {
+  width: 390px;
+  padding: 30px;
+  background-color: #fff;
+  margin: 100px auto;
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+border-radius: 30px;
+border: #474747 2px;
+
+}
+input.buttons {
+  height: 4%;
+  width: 25%;
+  border-radius: 30px;
+border-color: #CF1679;
+background-color: #FFF;
+}
+
+input#log.username , input#pwd.password{
+  margin-bottom: 10%;
+  width: 70%;
+  height: 5%;
+  border-radius: 30px;
+  background-color: #EBE8ED;
+  border: none;
+
+}
 
 /* connexion-inscription*/
 
@@ -71,6 +130,47 @@ padding-bottom: 15%;
 border-radius: 30px;
 border: #474747 2px;
 }
+
+
+
+
+/*fond de page*/
+  
+body{
+  font-family: "Poppins" ;
+background-color: #EBE8ED;}
+
+
+/*navbar*/
+#navbarSupportedContent{
+  justify-content: end;
+  padding-right: 5%;
+}
+
+ul#menu-header a {
+  color:#474747;
+}
+
+#logo{
+  height: 50px;
+  width: 50px;
+}
+
+.navbar-brand{
+  padding-left: 5%;
+}
+
+.container-fluid{
+  padding-block: 10px;
+}
+
+.accueil-fond{
+padding-top: 5%;
+padding-bottom: 15%;
+}
+
+
+
 
 h2 {
   font-family: "Cooper Std Black";
@@ -114,9 +214,10 @@ h2 {
 .login-btn {
   background-color: #FFF;
   border-radius: 30px;
-  border-color: EBE8ED;
+  border-color: #EBE8ED;
   width: 30%;
   height: 5%;
+  border-style: solid;
 }
 
 
