--- a/page.css
+++ b/page.css
@@ -193,7 +193,7 @@ text-align: center ;
 
 .row{
   row-gap: 3rem;
-  margin: auto;
+  margin-bottom: 6%;
 }
 
 .row-synd{
@@ -279,7 +279,7 @@ padding-right: 150px; */
   background: #fff;
   border:#8EDD93 4px solid;
     width: 70%;
-    height: 95%;
+    height: 1300px;
     border-radius: 35px;
     padding: 50px;
     margin-top: 30px;
@@ -483,4 +483,21 @@ label,input{
   padding: 0 10px;
   border-radius: 100px;
   z-index: 2;
+}
+#sauv{
+  background: #59C3CD;
+  color: #fff;
+  font-weight: 600;
+  width: 200px;
+  border: 0;
+  padding: 10px;
+  margin: 50px auto 0;
+  border-radius: 18px;
+  cursor: pointer;
+display:block;
+} 
+
+h3{
+  font-size: 20px;
+  font-weight: 600;
 }
