--- a/page.css
+++ b/page.css
@@ -1,35 +1,12 @@
+/* changer mot de passe */
+input#pass1.password , input#pass2.password {
+  margin-bottom: 10%;
+  width: 70%;
+  height: 5%;
+  border-radius: 30px;
+  background-color: #EBE8ED;
+  border: none;
 
-/* dropdown menu */
-
-
-.menu-principal {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.menu-principal li {
-  display: inline-block;
-  position: relative;
-}
-
-.menu-principal a {
-  display: block;
-  padding: 10px;
-  text-decoration: none;
-}
-
-.menu-principal .sub-menu {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  background-color: #fff;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-.menu-principal li:hover .sub-menu {
-  display: block;
 }
 
 
@@ -41,7 +18,7 @@
   background-color: #fff;
   margin: 100px auto;
   box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
-border-radius: 30px;
+  border-radius: 30px;
 border: #474747 2px;
 
 }
@@ -133,19 +110,59 @@ border: #474747 2px;
 
 
 
-
 /*fond de page*/
   
 body{
   font-family: "Poppins" ;
-background-color: #EBE8ED;}
+background-color: #EBE8ED;
+}
 
 
-/*navbar*/
+
+/* dropdown */
+
+.dropbtn {
+background-color: transparent;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(187, 42, 42, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #CDB4DB;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: transparent;}
 #navbarSupportedContent{
   justify-content: end;
   padding-right: 5%;
 }
+
+
+
+/*navbar*/
+
+
 
 ul#menu-header a {
   color:#474747;
@@ -170,7 +187,9 @@ padding-bottom: 15%;
 }
 
 
-
+#wpmem_reg form legend {
+  display: none;
+}
 
 h2 {
   font-family: "Cooper Std Black";
@@ -223,6 +242,9 @@ h2 {
 
 
 /* a propos*/
+
+
+
 .card-body-1{
   padding-top: 20%;
   padding-right: 5%;
@@ -271,8 +293,27 @@ h7{
 
 
 /*Qui sommes-nous*/
-.container-bl{
+.container-who{
   background-color:white;
+  height: 15%;
+  padding-right: 5%;
+  padding-left: 10%;
+}
+
+
+/* actualités */
+.container-actu{
+  padding-left: 7%;
+  padding-bottom: 5%;
+  padding-right: 5%;
+
+}
+
+.text-actu{
+  text-align: center;
+  padding-bottom: 3%;
+  padding-left: 6% ;
+  padding-right: 6%;
 }
 
 
@@ -340,4 +381,514 @@ padding-bottom: 5%;
   background-color: #FFF6E1;
 }
 
+
+/* profil */
+
+/*fond de page*/
+  
+body{
+  font-family: "Poppins" ;
+background-color: #FFEDF8;
+/* background-image: url('assets/img/bgconnex.png');  Remplacez le chemin par le chemin réel de votre image */
+    /* background-size: cover; /* Ajuste la taille de l'image pour couvrir toute la fenêtre */
+    /* background-position: center; /* Centre l'image horizontalement et verticalement */
+    /* background-repeat: no-repeat; /* Empêche la répétition de l'image */
+}
+
+
+/*navbar*/
+#navbarSupportedContent{
+  justify-content: end;
+  padding-right: 5%;
+}
+
+ul#menu-header a {
+  color:#474747;
+}
+
+#logo{
+  height: 50px;
+  width: 50px;
+}
+
+.navbar-brand{
+  padding-left: 5%;
+}
+
+.container-fluid{
+  padding-block: 10px;
+}
+
+.accueil-fond{
+padding-top: 5%;
+padding-bottom: 5%;
+}
+
+
+/* connexion-inscription*/
+
+
+#prenom{
+  background-color: #EBE8ED;
+
+}
+
+#nom{
+  background-color: #EBE8ED;
+  border-radius: 30px;
+  width: 75%;
+
+}
+
+#email{
+  background-color: #EBE8ED;
+  border-radius: 30px;
+  width: 75%;
+}
+
+#password{
+  background-color: #EBE8ED;
+  border-radius: 30px;
+  width: 75%;
+}
+
+.login-container{
+  width: 390px;
+  padding: 30px;
+  background-color: #fff;
+  margin: 100px auto;
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+border-radius: 30px;
+border: #474747 2px;
+}
+
+h2 {
+  font-family: "Cooper Std Black";
+  text-align: center;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.input-field {
+  margin-bottom: 20px;
+  justify-content: center;
+}
+
+
+.input-field label {
+  display: block;
+  margin-bottom: 5px;
+  color: #333;
+}
+
+.input-field input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border: 10px;
+  font-size: 14px;
+  color: #333;
+}
+
+.checkbox {
+  margin-bottom: 20px;
+}
+
+.checkbox input {
+  margin-right: 5px;
+}
+
+.checkbox label {
+  color: #333;
+}
+
+.login-btn {
+  background-color: #FFF;
+  border-radius: 30px;
+  border-color: EBE8ED;
+  width: 30%;
+  height: 5%;
+}
+
+
+
+/* a propos*/
+.card-body-1{
+  padding-top: 20%;
+  padding-right: 5%;
+  margin-right: 10%;
+}
+
+.card-text{
+  padding-right: 5%;
+
+}
+
+.accueil-fond{
+  justify-content: space-between;
+}
+
+.btn-primary {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #F4B425;
+  --bs-btn-border-color: #F4B425;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #f0ca76;
+  --bs-btn-hover-border-color: F4B425;
+  --bs-btn-focus-shadow-rgb: 66,70,73;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: F4B425;
+  --bs-btn-active-border-color: F4B425;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: F4B425;
+  --bs-btn-disabled-border-color: F4B425;
+}
+
+
+/*police d'écriture*/
+h1 {
+  font-family: "Cooper Std Black", serif;
+  font-weight: 400;
+  font-size: 55px;
+  font-style: normal;
+}
+
+h7{
+  font-family: "Poppins";
+}
+
+
+/*Qui sommes-nous*/
+.container-bl{
+  background-color:white;
+}
+
+
+/* syndrome*/
+.container-synd{
+  padding-left: 5%;
+  padding-right: 5%;
+  font-family: "Poppins";
+}
+
+.card-body{
+  margin: auto;
+text-align: center ;
+}
+
+.btn-info{
+  margin: center;
+  border-radius: 12px;
+}
+
+.row{
+  row-gap: 3rem;
+  margin-bottom: 6%;
+}
+
+.row-synd{
+  width: 90%;
+    margin: auto;
+    row-gap: 2rem;
+}
+
+.card{
+  position: relative;
+    display: flex;
+    overflow: hidden;
+    padding: 2rem;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-clip: border-box;
+    border: 1px solid red(0, 0, 0, 0.125);
+}
+
+.text-synd{
+  text-align: center;
+}
+
+.page-id-185{
+background-color: #FFF6E1;
+}  
+
+.container-synd{
+padding-top: 5%;
+/* padding-left: 150px;
+padding-right: 150px; */
+}
+
+.wp-block-embed__wrapper{
+  justify-content: center;
+}
+
+.postid-151 {
+  background-color: #FFF6E1;
+}
+.wp-block-heading {
+  margin-bottom: 20px;
+}
+
+.page-id-75{
+  background-color: #DECCE8;
+}
+
 /*footer*/
+.custom-search {
+  position: relative;
+  width: 300px;
+  
+}
+.custom-search-input {
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 100px;
+  padding: 10px 100px 10px 20px; 
+  line-height: 1;
+  box-sizing: border-box;
+  outline: none;
+}
+.custom-search-botton {
+  position: absolute;
+  right: 3px; 
+  top: 3px;
+  bottom: 3px;
+  border: 0;
+  background: #CDB4DB;
+  color: #fff;
+  outline: none;
+  margin: 0;
+  padding: 0 10px;
+  border-radius: 100px;
+  z-index: 2;
+}
+
+/*page rdv*/
+.rdv{
+  font-family: 'Poppins';
+  background: #fff;
+  border:#8EDD93 4px solid;
+    width: 70%;
+    height: 1300px;
+    border-radius: 35px;
+    padding: 50px;
+    margin-top: 30px;
+    margin-right: 100px;
+    float: right;
+
+}
+
+
+.sidenav {
+  font-family: 'Poppins';
+  width: 240px;
+  position: fixed;
+  z-index: 1;
+  top: 170px;
+  left: 25px;
+  overflow-x: hidden;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 21px 13px 9px 45px;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 650;
+  color: #474747;
+  display: block;
+}
+
+.sidenav a:hover {
+  color: #8EDD93;
+}
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
+* {
+	box-sizing: border-box;
+}
+
+
+
+.datetimepicker {
+	display: inline-flex;
+	align-items: center;
+	border: #8EDD93 3px solid;
+	border-radius: 12px;
+  display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 0;
+	margin-bottom: 50px;
+  margin-top: 50px;
+	font-family: "Poppins", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+	color: #474747;
+	
+
+ input {
+		font: inherit;
+		color: inherit;
+		appearance: none;
+		outline: none;
+		border: 0;
+		background-color: transparent;
+		
+		&[type=date] {
+			width: 10rem;
+			padding: .25rem 0 .25rem .5rem;
+			border-right-width: 0;
+		}
+		
+		&[type=time] {
+			width: 5.5rem;
+			padding: .25rem .5rem .25rem 0;
+			border-left-width: 0;
+		}
+	}
+}
+
+.btn-success {
+    color: #fff;
+    background-color: #8edd93;
+    border-color: #8edd93;
+    border-radius: 12px;
+}
+.wp-block-column {
+  justify-content: center;
+}
+
+/*page profil*/
+
+.profil{
+  font-family: 'Poppins';
+  background: #CDB4DB;
+
+    width: 70%;
+    height: 95%;
+    border-radius: 35px;
+    padding: 100px;
+    margin-top: 50px;
+    margin-right: 100px;
+    float: right;
+
+}
+
+
+.sidenavP {
+  font-family: 'Poppins';
+  width: 240px;
+  position: fixed;
+  z-index: 1;
+  top: 170px;
+  left: 25px;
+  overflow-x: hidden;
+  padding-top: 60px;
+}
+
+.sidenavP a {
+  padding: 21px 13px 9px 45px;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 650;
+  color: #474747;
+  display: block;
+}
+
+.sidenavP a:hover {
+  color: #59C3CD;
+}
+.sidenavP .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+.custom-search {
+  position: relative;
+  width: 300px;
+  
+}
+.name {
+  width: 80%;
+  border: 1px solid #ccc;
+  border-radius: 100px;
+  padding: 10px 20px ; 
+  line-height: 1;
+  box-sizing: border-box;
+  outline: none;
+
+}
+.custom-search-botton {
+  position: absolute;
+  right: 3px; 
+  top: 3px;
+  bottom: 3px;
+  border: 0;
+  background: #CDB4DB;
+  color: #fff;
+  outline: none;
+  margin: 0;
+  padding: 0 10px;
+  border-radius: 100px;
+  z-index: 2;
+}
+.blobprof{
+  align-items: center;
+}
+label,input{
+  display:flex;
+  flex-direction:column;
+}
+.phone {
+  width: 80%;
+  border: 1px solid #ccc;
+  border-radius: 100px;
+  padding: 10px 100px 10px 20px; 
+  line-height: 1;
+  box-sizing: border-box;
+  outline: none;
+
+}
+.phonepre {
+  position: absolute;
+  height: 3%;
+  width: 3%;
+  border: 0;
+  background: #CDB4DB;
+  color: #fff;
+  outline: none;
+  margin: 0;
+  padding: 0 10px;
+  border-radius: 100px;
+  z-index: 2;
+}
+#sauv{
+  background: #59C3CD;
+  color: #fff;
+  font-weight: 600;
+  width: 200px;
+  border: 0;
+  padding: 10px;
+  margin: 50px auto 0;
+  border-radius: 18px;
+  cursor: pointer;
+display:block;
+} 
+
+h3{
+  font-size: 20px;
+  font-weight: 600;
+}
