--- a/page.css
+++ b/page.css
@@ -193,7 +193,7 @@ text-align: center ;
 
 .row{
   row-gap: 3rem;
-  margin-bottom: 6%;
+  margin: 20px;
 }
 
 .row-synd{
@@ -244,6 +244,19 @@ padding-right: 150px; */
 }
 
 /*footer*/
+li{
+  margin: 10px ;
+}
+.col-centered {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.text-footer{
+ font-weight:bold;
+ margin: 15px;
+}
 .custom-search {
   position: relative;
   width: 300px;
@@ -272,6 +285,9 @@ padding-right: 150px; */
   border-radius: 100px;
   z-index: 2;
 }
+.nav-link{
+  color: #fff;
+}
 
 /*page rdv*/
 .rdv{
@@ -287,47 +303,6 @@ padding-right: 150px; */
     float: right;
 
 }
-
-
-.sidenav {
-  font-family: 'Poppins';
-  width: 240px;
-  position: fixed;
-  z-index: 1;
-  top: 170px;
-  left: 25px;
-  overflow-x: hidden;
-  padding-top: 60px;
-}
-
-.sidenav a {
-  padding: 21px 13px 9px 45px;
-  text-decoration: none;
-  font-size: 20px;
-  font-weight: 650;
-  color: #474747;
-  display: block;
-}
-
-.sidenav a:hover {
-  color: #8EDD93;
-}
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
-
-* {
-	box-sizing: border-box;
-}
-
 
 
 .datetimepicker {
@@ -393,37 +368,6 @@ padding-right: 150px; */
 
 }
 
-
-.sidenavP {
-  font-family: 'Poppins';
-  width: 240px;
-  position: fixed;
-  z-index: 1;
-  top: 170px;
-  left: 25px;
-  overflow-x: hidden;
-  padding-top: 60px;
-}
-
-.sidenavP a {
-  padding: 21px 13px 9px 45px;
-  text-decoration: none;
-  font-size: 20px;
-  font-weight: 650;
-  color: #474747;
-  display: block;
-}
-
-.sidenavP a:hover {
-  color: #59C3CD;
-}
-.sidenavP .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
 
 .custom-search {
   position: relative;
@@ -500,4 +444,53 @@ display:block;
 h3{
   font-size: 20px;
   font-weight: 600;
+}
+
+/* page results */
+
+.pgresults {
+  font-family: 'Poppins';
+  background: #fff;
+  border: #CF1679 4px solid;
+  width: 70%;
+  height: 1300px;
+  border-radius: 35px;
+  padding: 30px;
+  margin: auto;
+}
+.body-card{
+  text-align: left;
+}
+.card-img-top{
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+.rtitle{
+  color:#CF1679;
+  margin-bottom: 15px;
+  font-size: 30px;
+}
+.res{
+  font-size: 14px;
+  font-weight: 550;
+}
+
+.pgresults p {
+  font-size: 14px;
+  margin-bottom: 40px;
+}
+.title-res {
+  color: #CF1679;
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+.pgresults .card{
+  max-height:200px
+}
+
+.pgresults .row{
+  align-items: center;
 }
