--- a/quiz.css
+++ b/quiz.css
@@ -8,6 +8,12 @@
 
     
 }
+.question-screen  {
+    background-image: url(assets/img/bgquiz.png);
+    background-size: cover;
+    background-position-x: center;
+
+}
 .question-screen ul {
     list-style-type: none;
     align-items: center;
@@ -32,6 +38,7 @@
     display: none;
 }
 
+
 *{
     margin: 0;
     padding: 0;
@@ -45,12 +52,12 @@ body {
     background: #CDB4DB;
     width: 90%;
     max-width: 800px;
-    height: 1000px;
+    height: 500px;
     border-radius: 30px;
     padding: 50px;
     justify-content: center;
     margin: auto; 
-    margin-top: 50px;
+  
 }
 .app h2{
     font-weight:650 ;
@@ -87,7 +94,7 @@ body {
  
 .reponse{
     align-items: center;
-    margin: 75px;
+    margin: 38px 80px;
 }
 
  #start{
@@ -132,4 +139,31 @@ p{
     text-align: center;
     font-size: 14px;
     padding : 35px 250px
+}
+.progress-bar {
+    width: 100%;
+    height: 20px; /* Adjust the height as needed */
+    background-color: #eee; /* Set the background color */
+    border-radius: 12px;
+}
+
+.progress {
+    height: 100%;
+    background-color: #CF1679; /* Set the progress color */
+    border-radius: 12px;
+}
+h4{
+    color: #CF1679;
+    margin-bottom: 15px;
+    font-size: 20px;
+    font-weight: 700;
+
+}
+.h6 {
+    justify-content: center;
+    align-items: center;
+}
+.diag{
+    justify-content: center;
+    font-size: 12px;
 }
