--- a/quiz.css
+++ b/quiz.css
@@ -1,5 +1,28 @@
+.end-screen  a{
+    color: #fff;
+    text-decoration: none;
+}
 
 
+@media only screen and (max-width: 600px) {
+    /* Adjust font size for smaller screens */
+    body {
+        font-size: 14px;
+    }
+
+    /* Adjust spacing for smaller screens */
+    .welcome-screen,
+    .question-screen,
+    .end-screen {
+        padding: 20px;
+    }
+
+    .app {
+        padding: 20px;
+    }
+
+    /* Additional responsive styles as needed */
+}
 
 .welcome-screen,
 .question-screen,
@@ -10,6 +33,12 @@
     justify-content: center;
 
     
+}
+.question-screen  {
+    background-image: url(assets/img/bgquiz.png);
+    background-size: cover;
+    background-position-x: center;
+
 }
 .question-screen ul {
     list-style-type: none;
@@ -29,11 +58,18 @@
     align-items: center;
     text-align: center;
 }
+.end-screen  {
+    background-image: url(assets/img/bgquiz.png);
+    background-size: cover;
+    background-position-x: center;
+
+}
 
 .question-screen,
 .end-screen {
     display: none;
 }
+
 
 *{
     margin: 0;
@@ -48,12 +84,18 @@ body {
     background: #CDB4DB;
     width: 90%;
     max-width: 800px;
-    height: 1000px;
+    min-height: 500px;
     border-radius: 30px;
     padding: 50px;
     justify-content: center;
     margin: auto; 
-    margin-top: 50px;
+  
+}
+@media only screen and (max-width: 600px) {
+    .app {
+        width: 95%; /* Take the full width of the screen */
+        padding: 20px; /* Adjust padding for smaller screens */
+    }
 }
 .app h2{
     font-weight:650 ;
@@ -90,7 +132,7 @@ body {
  
 .reponse{
     align-items: center;
-    margin: 75px;
+    margin: 38px 80px;
 }
 
  #start{
@@ -105,14 +147,19 @@ body {
     cursor: pointer;
 display:block;
 } 
-#resultats{
+
+
+#resultats {
+    color: #fff;
+    
+    text-decoration: underline;
     background: #CF1679;
     color: #fff;
     font-weight: 600;
     width: 200px;
     border: 0;
     padding: 10px;
-    margin: 100px auto 0;
+    margin: 40px auto 0;
     border-radius: 18px;
     cursor: pointer;
     display: block;
@@ -134,8 +181,53 @@ p{
     bottom: 0;  
     text-align: center;
     font-size: 14px;
-    padding : 35px 250px
+    /* padding : 35px 250px */
+    padding : 10px 20px; 
+    margin-bottom: 3%;
+    width: 100%; 
+}
+.progress-bar {
+    width: 100%;
+    height: 20px; /* Adjust the height as needed */
+    background-color: #eee; /* Set the background color */
+    border-radius: 12px;
 }
 
+.progress {
+    height: 100%;
+    background-color: #CF1679; /* Set the progress color */
+    border-radius: 12px;
+}
+h4{
+    color: #CF1679;
+    margin-bottom: 15px;
+    font-size: 20px;
+    font-weight: 700;
 
-  
+}
+
+.diag{
+    display: flex;
+    justify-content: center;
+    font-size: 20px; 
+    font-weight: 700;
+    align-items: center;
+    margin: 20px 0;
+}
+#previous {
+    background: #CF1679;
+    color: #fff;
+    width: 100px;
+    border: 0;
+    padding: 10px;
+    border-radius: 18px;
+    cursor: pointer;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+}
+#resultChart{
+    width: 200px;
+    height: 100px;
+} 
